--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -291,28 +291,12 @@ if(NOT HAVE_TAGLIB AND NOT HAVE_TAGPARSER)
 endif()
 
 # SingleApplication
-if(QT_VERSION_MAJOR EQUAL 5)
-  set(KDSINGLEAPPLICATION_NAME "KDSingleApplication")
-else()
-  set(KDSINGLEAPPLICATION_NAME "KDSingleApplication-qt${QT_VERSION_MAJOR}")
-endif()
-find_package(${KDSINGLEAPPLICATION_NAME} 1.1.0)
-if(TARGET KDAB::kdsingleapplication)
-  if(QT_VERSION_MAJOR EQUAL 5)
-    set(KDSINGLEAPPLICATION_VERSION "${KDSingleApplication_VERSION}")
-  elseif(QT_VERSION_MAJOR EQUAL 6)
-    set(KDSINGLEAPPLICATION_VERSION "${KDSingleApplication-qt6_VERSION}")
-  endif()
-  message(STATUS "Using system KDSingleApplication (Version ${KDSINGLEAPPLICATION_VERSION})")
-  set(SINGLEAPPLICATION_LIBRARIES KDAB::kdsingleapplication)
-else()
-  message(STATUS "Using 3rdparty KDSingleApplication")
-  set(HAVE_KDSINGLEAPPLICATION_OPTIONS ON)
-  add_subdirectory(3rdparty/kdsingleapplication)
-  set(SINGLEAPPLICATION_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/kdsingleapplication/KDSingleApplication/src)
-  set(SINGLEAPPLICATION_LIBRARIES kdsingleapplication)
-  add_definitions(-DKDSINGLEAPPLICATION_STATIC_BUILD)
-endif()
+add_subdirectory(3rdparty/singleapplication)
+set(SINGLEAPPLICATION_INCLUDE_DIRS
+  ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/singleapplication/singleapplication
+  ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/singleapplication/singlecoreapplication
+)
+set(SINGLEAPPLICATION_LIBRARIES singleapplication singlecoreapplication)
 
 if(APPLE)
   add_subdirectory(3rdparty/SPMediaKeyTap)
